[project]
name = "project2-job-search"
version = "0.1.0"
description = ""
authors = [
    { name = "Oleg Matyushenko", email = "mos_olma@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
dev = [
    "requests (>=2.32.5,<3.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)"
]

[tool.black]
line-length = 119
target-version = ['py314']
extend-exclude = '''
\\.git
| \\.venv
| venv
| env
| __pycache__
'''

[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
warn_return_any = true
explicit_package_bases = true
namespace_packages = true
exclude = [
    "\\.venv",
    "venv",
    "env",
    "__pycache__",
    "\\.git",
    "build",
    "dist"
]

[tool.isort]
line_length = 119
profile = "black"
skip_glob = [".venv/*", "venv/*", "env/*", "__pycache__/*"]
